test/parser/results/test_parser_misc_ts.txt
test/parser/misc/ts
===================
Passed:       34/34 (100.00%)
Failed:       0
AST mismatch: 0/34

✓ test/parser/misc/ts/ambient-reserved-param.ts
✓ test/parser/misc/ts/as-satisfies-asi-before-postfix.ts
✓ test/parser/misc/ts/assignment-target-ts-assertions.ts
error: Invalid assignment target
   |
25 | // whole expression is still not assignable (oxc rejects this too).
26 | f()! = b;
   | ^^^^
27 |
   |
   = help: The expression behind a non-null or type assertion must itself be a simple assignment target, like an identifier or member access, not a call or other expression.


✓ test/parser/misc/ts/catch-type-annotation.ts
✓ test/parser/misc/ts/constructor-overloads.ts
✓ test/parser/misc/ts/declare-function-overloads.ts
✓ test/parser/misc/ts/decorated-abstract-class-expression-invalid.ts
error: Expected 'class' keyword, but found 'abstract'
   |
 1 | const C = @x(() => 0) abstract class {};
   |                       ^^^^^^^^
 2 |
   |

✓ test/parser/misc/ts/decorated-abstract-class-heritage.ts
✓ test/parser/misc/ts/decorated-abstract-class.ts
✓ test/parser/misc/ts/decorated-export-abstract-class.module.ts
✓ test/parser/misc/ts/decorated-export-default-abstract-class-named.module.ts
✓ test/parser/misc/ts/decorated-export-default-abstract-class.module.ts
✓ test/parser/misc/ts/dynamic-tag-outside-tsrx.tsx
error: Expected JSX element name, but found '{'
   |
 1 | const tag = "section";
 2 | const value = <{tag} />;
   |                ^
 3 | const fallback = value;
   |
   = help: Dynamic JSX tag names are only enabled in TSRX files


✓ test/parser/misc/ts/empty-type-argument-list.ts
error: A type argument list cannot be empty
   |
 4 |
 5 | type A = Array<numbe<>>
   |                      ^^
 6 | type B = Array<numbe<> >
   |

✓ test/parser/misc/ts/extends-fused-angle-type-args.ts
✓ test/parser/misc/ts/extends-non-null-assertion.ts
✓ test/parser/misc/ts/function-overloads.ts
✓ test/parser/misc/ts/jsx-fused-angle-type-args.tsx
✓ test/parser/misc/ts/lazy-destructuring-outside-tsrx.ts
error: Lazy destructuring patterns are only enabled in TSRX files
   |
 1 | declare const props: { value: string };
 2 | const &{ value } = props;
   |       ^
 3 |
   |
   = help: Use a .tsrx file or remove the '&' lazy-pattern marker.


✓ test/parser/misc/ts/optional-chain-call-fused-angle.ts
✓ test/parser/misc/ts/optional-chain-instantiation-fused-angle.ts
✓ test/parser/misc/ts/redeclare-error-class.ts
error: Identifier 'B1' has already been declared
   |
 3 | // class + class
 4 | class B1 {}
   |       ~~ 'B1' was first declared as a class here
 5 | class B1 {}
   |       ^^
   |       ~~ cannot be redeclared here
 6 |
   |
   = help: Consider removing or renaming this declaration of 'B1'


✓ test/parser/misc/ts/redeclare-error-enum.ts
error: Identifier 'C1' has already been declared
   |
 3 | // regular enum + const enum (different constness)
 4 | enum C1 {
   |      ~~ 'C1' was first declared as an enum here
 5 |   A,
 6 | }
 7 | const enum C1 {
   |            ^^
   |            ~~ cannot be redeclared here
 8 |   B,
   |
   = help: Consider removing or renaming this declaration of 'C1'


✓ test/parser/misc/ts/redeclare-error-namespace.ts
error: Identifier 'D1' has already been declared
   |
 3 | // instantiated namespace + var (instantiated namespace occupies value space)
 4 | namespace D1 {
   |           ~~ 'D1' was first declared as a namespace here
 5 |   export const a = 1;
 6 | }
 7 | var D1 = 0;
   |     ^^
   |     ~~ cannot be redeclared here
 8 |
   |
   = help: Consider removing or renaming this declaration of 'D1'


✓ test/parser/misc/ts/redeclare-error-type-alias.ts
error: Identifier 'A1' has already been declared
   |
 3 | // type alias + type alias
 4 | type A1 = number;
   |      ~~ 'A1' was first declared as a type alias here
 5 | type A1 = string;
   |      ^^
   |      ~~ cannot be redeclared here
 6 |
   |
   = help: Consider removing or renaming this declaration of 'A1'


✓ test/parser/misc/ts/redeclare-merge-class-interface.ts
✓ test/parser/misc/ts/redeclare-merge-cross-space.ts
✓ test/parser/misc/ts/redeclare-merge-enum.ts
✓ test/parser/misc/ts/redeclare-merge-import.module.ts
error: Identifier 'T7' has already been declared
   |
37 | // Two imports of the same name DO conflict (unambiguous duplicate).
38 | import T7 from "./a";
   |        ~~ 'T7' was first declared as an import here
39 | import T7 from "./b";
   |        ^^
   |        ~~ cannot be redeclared here
40 |
   |
   = help: Consider removing or renaming this declaration of 'T7'


✓ test/parser/misc/ts/redeclare-merge-interfaces.ts
✓ test/parser/misc/ts/redeclare-merge-namespace.ts
✓ test/parser/misc/ts/redeclare-merge-overloads.ts
✓ test/parser/misc/ts/redeclare-type-parameter-scope.ts
✓ test/parser/misc/ts/submodule-import-outside-tsrx.ts
error: Identifier module specifiers require TSRX
   |
 1 | import { load } from server;
   |                      ^^^^^^
 2 |
   |
   = help: Use a .tsrx file for submodule imports such as import { load } from server.
